--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connect-livereload": "~0.3.2",
     "grunt": "~0.4.1",
     "grunt-contrib-compass": "~0.8.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-jshint": "~0.6.5",
