add jsonmin & bugfix

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-livereload": "~0.1.2",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-jsonmin": "^0.2.4",
     "matchdep": "^0.3.0"
   },
   "repository": {
